# wow-prices

./: .gitignore  README.md  db.py  graphs.py  main.py  utils.py
backend/: .env.example  blizzard_api.py  db.py  exceptions.py  main.py  models.py  pyproject.toml  requirements.txt  server.py  utils.py
backend/app/: background_tasks.py  blizzard_api.py  dependencies.py  logger.py  main.py  models.py  schemas.py  startup_tasks.py  utils.py  websocket.py
backend/app/routers/: internal.py  items.py  notifications.py  settings.py
backend/app/services/: notification_services.py
backend/supabase/migrations/: 20250912143800_remote_schema.sql  20250912144341_remote_schema.sql  20260315183721_remote_schema.sql  20260315221025_remote_schema.sql  20260316030351_remote_schema.sql  20260316224529_remote_schema.sql  20260316225349_remote_schema.sql
frontend/: .prettierrc.json  env.d.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/src/: App.vue  main.ts  utils.ts
frontend/src/assets/: main.css
frontend/src/components/: GeneralSettingsDialog.vue  ItemImage.vue  ItemOnCalculator.vue  ItemOnHome.vue  LoadingSpinner.vue  NavBar.vue  NotificationItem.vue
frontend/src/components/icons/: BellIcon.vue  CheckIcon.vue  DownCheckIcon.vue  NotifyDownIcon.vue  XIcon.vue  (+3 more)
frontend/src/lib/: utils.ts
frontend/src/router/: index.ts
frontend/src/services/: websocketService.ts
frontend/src/types/: index.d.ts  item.d.ts  notifications.d.ts  settings.d.ts
frontend/src/views/: AllItemsView.vue  CalculatorView.vue  HomeView.vue  ItemView.vue  WeekView.vue
(+25 files in other folders)
